--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9f52713f-b767-4d4c-b91a-9ed47f8e4b85"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
